--- a/P1.ipynb
+++ b/P1.ipynb
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -490,14 +490,17 @@
     "    #plt.imshow(blit_img)\n",
     "    return blit_img\n",
     "\n",
-    "img_dir = \"test_images/\"\n",
-    "img_paths = os.listdir(img_dir)\n",
-    "img_list = os.listdir(img_dir)\n",
+    "def processing_test_images():\n",
+    "    img_dir = \"test_images/\"\n",
+    "    img_paths = os.listdir(img_dir)\n",
+    "    img_list = os.listdir(img_dir)\n",
     "\n",
-    "for name in img_list:\n",
-    "    image = mpimg.imread(img_dir + name)\n",
-    "    result = detect_lane_lines(image)\n",
-    "    mpimg.imsave(img_dir + name + \"_detect.jpg\", result)"
+    "    for name in img_list:\n",
+    "        image = mpimg.imread(img_dir + name)\n",
+    "        result = detect_lane_lines(image)\n",
+    "        mpimg.imsave(img_dir + name + \"_detect.jpg\", result)\n",
+    "        \n",
+    "#processing_test_images()"
    ]
   },
   {
